Configure GitHub Pages base path for subdirectory deployment

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Calculate position size, risk, and stop loss for trading" />
   <meta name="theme-color" content="#2f6fed" />
+  <base href="/trading-calculator/" />
   <link rel="manifest" href="manifest.json" />
   <link rel="apple-touch-icon" href="icon-192.svg" />
   <title>Trading Calculator</title>
